Corregido error, uri